refactor 🎨 (core): change project name to zsh ai (#1)
Signed-off-by: Luis Mayta <luis@hadenlabs.com>

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,6 @@
 # This file is loaded by wrangler dev for local development
 # DO NOT commit sensitive values to version control
 # **NOTE**: please check the following document docs/env-vars.md
-APP_NAME=base-template
+APP_NAME=zsh-ai
 SONAR_URL=
 SONAR_TOKEN=
