--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,4 @@
 #!/usr/bin/env ksh
 # -*- coding: utf-8 -*-
 
-eval "$(env-secrets bw github.com/hadenlabs/base-template)"
+eval "$(env-secrets bw github.com/hadenlabs/zsh-ai)"
