--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.organization=hadenlabs
-sonar.projectKey=hadenlabs:base-template
-sonar.projectName=base-template
+sonar.projectKey=hadenlabs:zsh-ai
+sonar.projectName=zsh-ai
 sonar.projectVersion=0.0.0
 sonar.projectBaseDir=./
 sonar.sources=./
