--- a/provision/generators/README.yaml
+++ b/provision/generators/README.yaml
@@ -47,14 +47,22 @@ requirements: |-
 
   This is a list of plugins that need to be installed previously to enjoy all the goodies of this configuration:
 
+  - [zsh-core](https://github.com/hadenlabs/zsh-core)
   - [gomplate](https://github.com/hairyhenderson/gomplate)
   - [python](https://www.python.org)
   - [taskfile](https://github.com/go-task/task)
 
 # Short description of this project
 description: |-
-
   zsh-ai for project
+
+installation:
+  - "docs/include/installation/oh-my-zsh.md"
+  - "docs/include/installation/antigen.md"
+  - "docs/include/installation/antibody.md"
+
+include:
+  - "docs/functions.md"
 
 usages:
   - docs/usage.md
