refactor 🎨 (ai): implement information references project (#4)
Signed-off-by: Luis Mayta <luis@hadenlabs.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,7 +27,7 @@ repos:
           - --ignore-words=.ci/linters/.codespell-ignores
         exclude: >
           (?x)^(
-            agents.md|
+            AGENTS.md|
             app/components/sections\/.*$|
             app/data\/.*$|
             app/ia/datasets\/.*$|
